--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ body {
     width: 100%;
     height: 100%;
     background-image: url('../assets/background.jpg');
-    background-size: cover;
+    background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
 }
